--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+alembic==1.8.1
 autopep8==1.7.0
 click==8.1.3
 Flask==2.2.2
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.2
 MarkupSafe==2.1.1
 pycodestyle==2.9.1
 SQLAlchemy==1.4.40
