--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.8.1
+apispec==5.2.2
 autopep8==1.7.0
 click==8.1.3
 Flask==2.2.2
+flask-apispec==0.11.4
+flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 importlib-metadata==4.12.0
@@ -9,8 +12,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.2
 MarkupSafe==2.1.1
+marshmallow==3.17.1
+packaging==21.3
 pycodestyle==2.9.1
+pyparsing==3.0.9
+six==1.16.0
 SQLAlchemy==1.4.40
 toml==0.10.2
+webargs==8.2.0
 Werkzeug==2.2.2
 zipp==3.8.1
