--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
-  web:
+  api:
+    container_name: tracker-api
     build: .
     ports:
       - "5000:5000"
@@ -8,3 +9,22 @@ services:
     environment:
       FLASK_APP: tracker
       FLASK_ENV: development
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres
+    entrypoint: /tracker-api/entrypoint.sh
+    depends_on:
+      - db
+
+  db:
+    container_name: db
+    image: postgres:12
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata: {}
