--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       FLASK_APP: tracker
       FLASK_ENV: development
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres
-    entrypoint: /tracker-api/entrypoint.sh
+    entrypoint: entrypoint.sh
     depends_on:
       - db
 
