--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .:/tracker-api
     environment:
       FLASK_APP: tracker
-      FLASK_ENV: development
+      FLASK_DEBUG: development
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres
     # entrypoint: /tracker-api/entrypoint.sh
     depends_on:
