--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==2.2.2
 flask-apispec==0.11.4
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
